infra/k8s/challenges-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenges-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenges
  template:
    metadata:
      labels:
        app: challenges
    spec:
      containers:
        - name: challenges
          image: pervolarakis/challenges
---
apiVersion: v1
kind: Service
metadata:
  name: challenges-cluster-srv
spec:
  selector:
    app: challenges
  ports:
    - name: challenges
      protocol: TCP
      port: 4000
      targetPort: 4000
