infra/k8s/execute-challenges-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execute-challenges-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: execute-challenges
  template:
    metadata:
      labels:
        app: execute-challenges
    spec:
      containers:
        - name: execute-challenges
          image: pervolarakis/executechallenges
---
apiVersion: v1
kind: Service
metadata:
  name: execute-challenges-cluster-srv
spec:
  selector:
    app: execute-challenges
  ports:
    - name: execute-challenges
      protocol: TCP
      port: 4000
      targetPort: 4000
