infra/k8s/history-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history
  template:
    metadata:
      labels:
        app: history
    spec:
      containers:
        - name: history
          image: pervolarakis/history
---
apiVersion: v1
kind: Service
metadata:
  name: history-cluster-srv
spec:
  selector:
    app: history
  ports:
    - name: history
      protocol: TCP
      port: 4000
      targetPort: 4000
