infra/k8s/moderate-challenges-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderate-challenges-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderate-challenges
  template:
    metadata:
      labels:
        app: moderate-challenges
    spec:
      containers:
        - name: moderate-challenges
          image: pervolarakis/moderatechallenges
---
apiVersion: v1
kind: Service
metadata:
  name: moderate-challenges-cluster-srv
spec:
  selector:
    app: moderate-challenges
  ports:
    - name: moderate-challenges
      protocol: TCP
      port: 4000
      targetPort: 4000
