infra/k8s/pendingChallenges-depls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pendingchallenges-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pendingchallenges
  template:
    metadata:
      labels:
        app: pendingchallenges
    spec:
      containers:
        - name: pendingchallenges
          image: pervolarakis/pendingchallenges
---
apiVersion: v1
kind: Service
metadata:
  name: pendingchallenges-cluster-srv
spec:
  selector:
    app: pendingchallenges
  ports:
    - name: pendingchallenges
      protocol: TCP
      port: 4000
      targetPort: 4000
