infra/k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: eurytus.com
      http:
        paths:
          - path: /api/v1/users/?(.*)
            backend:
              serviceName: auth-cluster-srv
              servicePort: 4000
